--- a/styles/index.css
+++ b/styles/index.css
@@ -32,7 +32,7 @@ nav{
     border-radius:3px;
     color:var(--clr-white);
     font-size:1rem;
-    margin:0;
+    margin:1rem 0;
     padding:8px;
     width:fit-content;
 }
