--- a/styles/questions.css
+++ b/styles/questions.css
@@ -1,26 +1,26 @@
 .question-container{
-    margin:1rem 0;
-    text-align:left;
-    width:30rem;
+    margin: 1rem 0;
+    text-align: left;
+    width: 30rem;
 }
 
 .option-radio{
-    display:none;
+    display: none;
 }
 
 .option-label{
-    background-color: var(--teritiary-clr);
-    border-radius:4px;
+    background-color: var(--clr-tertiary);
+    border-radius: 4px;
     display: inline-block;
-    margin:8px 0;
-    padding:4px;
+    margin: 8px 0;
+    padding: 4px;
     transition: all .5s ease;
-    width:100%;
+    width: 100%;
 }
 
 .option-label:hover{
-    background-color: var(--secondary-clr);
-    cursor:pointer;
+    background-color: var(--clr-secondary);
+    cursor: pointer;
     transform: translate3D(0,-1px,0) scale(1.03);
 }
 
