--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 nav{
-    width: 10rem;
+    width: 15rem;
 }
 
 .icon-img{
@@ -42,12 +42,17 @@ nav{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
-a:hover, i:hover{
-    color: var(--clr-primary);
+a, a:hover, i:hover{
+    color:var(--clr-primary);
 }
 
 footer{
     bottom: 0;
     position: fixed;
     width: 100%;
+}
+
+.btn-img{
+    background-color:transparent;
+    border:none;
 }
