--- a/styles/categories.css
+++ b/styles/categories.css
@@ -30,3 +30,9 @@
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     transition: all .5s ease;
 }
+
+@media (max-width:940px){
+    .category-container{
+        width: 100%;
+    }
+}
