--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,7 @@ nav{
     width: 15rem;
 }
 
-.menu-icon{
+.menu-btn{
     display:none;
 }
 
@@ -51,6 +51,13 @@ a, a:hover, i:hover{
     color:var(--clr-primary);
 }
 
+.nav-pill-container{
+    display: inline;
+    width: 18rem;
+    display: flex;
+    justify-content: space-between;
+}
+
 .nav-pill{
     display: inline;
     list-style: none;
@@ -89,12 +96,39 @@ footer{
         align-items: flex-end;
         width: 3rem;
     }
-    .menu-icon{
+    .menu-btn{
         display:inline;
+        background-color: transparent;
+        border: none;
+        font-size: 1rem;
     }
 
     .nav-pill-container{
+        top:4.5rem;
+        right: 4px;
+        position: absolute;
+        background-color: var(--clr-light-grey);
+        width: 9rem;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         display: none;
+
+    }
+    .nav-link {
+        color: var(--clr-black);
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        width: 100%;
+    }
+    
+    .nav-link:hover{
+        background-color: var(--clr-grey);
+        color: var(--clr-black);
     }
 
     .intro-container{
